--- a/src/main/resources/templates/report/departmenTable.html
+++ b/src/main/resources/templates/report/departmenTable.html
@@ -56,6 +56,6 @@
 		</form>
 	</div>
 </div>
-<script src="/你的JS路径//report/departmentable_do/.js"></script>
+<script src="/js/report/departmenTable.js"></script>
 </body>
 </html>
