--- a/src/main/resources/templates/report/row.html
+++ b/src/main/resources/templates/report/row.html
@@ -84,6 +84,6 @@
 		</form>
 	</div>
 </div>
-<script src="/你的JS路径//report/row_do/.js"></script>
+<script src="/js/report/row.js"></script>
 </body>
 </html>
