--- a/src/main/resources/templates/report/rtemplate.html
+++ b/src/main/resources/templates/report/rtemplate.html
@@ -70,6 +70,6 @@
 		</form>
 	</div>
 </div>
-<script src="/你的JS路径//report/rtemplate_do/.js"></script>
+<script src="/js/report/rtemplate.js"></script>
 </body>
 </html>
