--- a/src/main/resources/templates/index/account.html
+++ b/src/main/resources/templates/index/account.html
@@ -77,13 +77,12 @@
 				</div>
 				<div class="layui-form-item">
 					<div class="layui-form-label ">验证码</div>
-					<img id="vrifyCode_modifypwd" alt="验证码" onclick="this.src='/kaptcha?d='+new Date()*1" src="/kaptcha" />
-					<input type="text" placeholder="请输入验证码" required="required" id="vrifyCode" name="vrifyCode" class="layui-input input-sm" style="width: 30%; display: inline;">
+					<img id="vrifyCode_modifypwd" alt="验证码" onclick="this.src='/kaptcha?id='+new Date()*1" src="/kaptcha" />
+					<input type="text" placeholder="请输入验证码" required="required" id="vcode" name="vcode" class="layui-input input-sm" style="width: 30%; display: inline;">
 				</div>
 			</form>
 		</div>
 	</div>
-	<font color="red">绑定当前版本不支持 即时绑定。请退出后再绑定</font>
 	<script type="text/javascript" src="/js/system/account/changePas.js"></script>
 </body>
 </html>
