--- a/src/main/resources/templates/index/admin/welcome.html
+++ b/src/main/resources/templates/index/admin/welcome.html
@@ -1,22 +1,33 @@
 <html>
 <head>
 <#include "/common/common2.ftl"/>
+<style>
+	div{
+		margin-left: 20px;
+	}
+	ul{
+		margin-left: 100px;
+	}
+	ul li{
+		padding-top: 10px;
+	}
+</style>
 </head>
 <body>
 	<section class="content">
 		<div>
-			<p>该项目使用SpringBoot2.0版本进行开发， 项目借鉴于开源项目<a target="_blank" href="http://git.oschina.net/YYDeament/88ybg" style="color: blue;">88云报告</a></p>
-			<p>本项目完全将代码重构，使用SpringJpaData作为数据访问框架，将多个接口调用规范化，摒除了多个无效接口与功能。</p>
-			<p>项目前端框架与<a target="_blank" href="http://git.oschina.net/YYDeament/88ybg" style="color: blue;">88云报告</a>同样使用LarryCMS.但是后端代码则变动非常之大，主要为适应版本更新，并且添加了额外的功能，移除了不必要的功能。</p>
-			<p>项目中几个部分同样借鉴于<a target="_blank" href="http://git.oschina.net/YYDeament/88ybg" style="color: blue;">88云报告</a>，如:Vue与后台交互接口、Excel信息生成、代码生成、二维码生成、数据库表设计。</p>
-			<p>在此非常感谢诸多技术工作者将自己的劳动成功分享给大家进行了解与阅读。</p>
-			<p>本项目中同样我自主实现了并完善了一些功能： 如：验证码绘制、定时邮件的发送与管理、多个其他的数据表设计、前端页面的重新布局、远程配置的读取、第三方QQ登录的接口等</p>
-			<p>本项目源码地址为<a target="_black" href="https://github.com/BinSSSSS/work-reporter" style="color: blue;">工作云报告</a></p>
-			<p>代码编写不易~如需转发借鉴请注明出处</p>
+			<p>该项目使用SpringBoot2.0版本进行开发， 项目借鉴于开源项目<a target="_blank" href="http://git.oschina.net/YYDeament/88ybg" style="color: blue;">88云报告</a></p><br>
+			<p>本项目完全将代码重构，使用SpringJpaData作为数据访问框架，将多个接口调用规范化，摒除了多个无效接口与功能。</p><br>
+			<p>项目前端框架与<a target="_blank" href="http://git.oschina.net/YYDeament/88ybg" style="color: blue;">88云报告</a>同样使用LarryCMS.但是后端代码则变动非常之大，主要为适应版本更新，并且添加了额外的功能，移除了不必要的功能。</p><br>
+			<p>项目中几个部分同样借鉴于<a target="_blank" href="http://git.oschina.net/YYDeament/88ybg" style="color: blue;">88云报告</a>，如:Vue与后台交互接口、Excel信息生成、代码生成、二维码生成、数据库表设计。</p><br>
+			<p>在此非常感谢诸多技术工作者将自己的劳动成功分享给大家进行了解与阅读。</p><br>
+			<p>本项目中同样我自主实现了并完善了一些功能： 如：验证码绘制、定时邮件的发送与管理、多个其他的数据表设计、前端页面的重新布局、远程配置的读取、第三方QQ登录的接口、Redis缓存等</p><br>
+			<p>本项目源码地址为<a target="_black" href="https://github.com/BinSSSSS/work-reporter" style="color: blue;">工作云报告</a></p><br>
+			<p>代码编写不易~如需转发借鉴请注明出处</p><br><br>
 		</div>
 		
 		<div>
-			<p>该项目目前主要实现的功能如下：</p>
+			<p>该项目目前主要实现的功能如下：</p><br>
 			<ul>
 				<li>1. 第三方QQ登录</li>
 				<li>2.邮件注册账号和邮件找回密码操作</li>
@@ -26,6 +37,7 @@
 				<li>6.通过数据库表一键生成代码</li>
 				<li>7.定时邮件提醒</li>
 				<li>8.本地上传文件到存储桶</li>
+				<li>9.Redis缓存</li>
 				<li>....更多完整功能开发中</li>
 			</ul>
 		</div>
