--- a/src/main/resources/templates/reset.html
+++ b/src/main/resources/templates/reset.html
@@ -10,7 +10,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="format-detection" content="telephone=no" />
 <meta name="baidu-site-verification" content="li4DjXBJKk" />
-<title>88云报告 重置密码</title>
+<title>工作云报告重置密码</title>
 <link href="/css/layerui/swiper.min.css" rel="stylesheet">
 <link rel="stylesheet" href="/js/plugins/layui/css/layui.css" />
 <link rel="stylesheet" href="/admin_files/awesome.css" />
@@ -23,7 +23,7 @@
 <body>
 	<div class="layui-layout layui-layout-admin">
 		<div class="container con-bj">
-			<canvas id="canv"></canvas>
+			<canvas id="canvas" width="1536" height="722" style="position: absolute;"></canvas>
 			<div id="bg-overlay"></div>
 			<div class="cls-content">
 				<div class="cls-content-sm panel">
@@ -32,10 +32,10 @@
 							<div class="swiper-slide swiper-no-swiping">
 								<div class="panel-body">
 									<div class="mar-ver">
-										<img src="/images/webicon/logo100X100.png" />
+										<img src="/images/webicon/lion-logo.jpg" />
 										<h3>你正在重置[${username}]用户的密码</h3>
 									</div>
-									<div class="layui-form" action="/common/login_do/login.do" method="post" id="loginForm">
+									<div class="layui-form" action="javascript:void(0)" method="post" id="loginForm">
 										<input type="hidden" value="${token}" id="token" name="token" disabled>
 										<div class="layui-form-item ipt-text">
 											<div class="dp-block">
@@ -55,14 +55,7 @@
 												<input type="text" id="mailCode" name="mailCode" placeholder="输入重置验证码" autocomplete="off" class="layui-input" lay-verify="required">
 											</div>
 										</div>
-										<!-- <div class="layui-form-item">
-											<div class="layui-input-inline">
-												<input type="text" name="vrifyCode" required lay-verify="required" placeholder="请输入验证码" autocomplete="off" class="layui-input">
-											</div>
-											<div class="layui-form-mid layui-word-aux">
-												<img name="Kaptcha" alt="验证码" onclick="this.src='/defaultKaptcha?d='+new Date()*1" src="/defaultKaptcha" id="loginyzm" />
-											</div>
-										</div> -->
+										
 										<button type="button" class="layui-btn layui-btn-normal layui-btn-disabled dp-block" onclick="checkPassword()" lay-filter="loginForm">重置密码</button>
 									</div>
 								</div>
@@ -70,12 +63,8 @@
 								<div class="pad-all">
 									<div class="col-6 box-left">
 										
-										<a href="/" class="reg">返回首页</a>
+										<a href="/index.html" class="reg">返回首页</a>
 									</div>
-										<!--  
-									<div class="col-6 box-right">
-										<a target="_blank" class="forgetPass">忘记密码？</a>
-									</div>-->
 								</div>
 							</div>
 						</div>
@@ -85,31 +74,9 @@
 			</div>
 		</div>
 	</div>
-	<div class="switch-bg">
-		<div id="switch-bg-list">
-			<div class="switch-loading" style="display: none;">
-				<img id="bgimg" src="/img/bg_img/bg-img-6.jpg" alt="" class="switch-chg-bg " />
-			</div>
-			<a target="_blank" href="http://www.miitbeian.gov.cn/" id="SYSTEM_authinfo">{{SYSTEM_authinfo}} </a>
-		</div>
-	</div>
-	<script src="/js/plugins/swiper/swiper.js"></script>
-	<script type="text/javascript" src="/js/plugins/layui/layui.js"></script>
+	<#include '/common/footer.ftl'>
 	<script src="/js/system/login_reg_fPass.js"></script>
 	<script type="text/javascript">
-        var app2 = new Vue({
-            el : '#SYSTEM_authinfo',
-            data : {
-                SYSTEM_authinfo : ''
-            },
-            created : function() {
-                var url = "/web_domain";
-                var _self = this;
-                $.post(url, function(data) {
-                    _self.SYSTEM_authinfo = data;
-                })
-            }
-        });
         var app = new Vue({
             el : '#loginForm',
             data : {},
@@ -164,29 +131,5 @@
             });
         }
     </script>
-	<script src="http://res.wx.qq.com/connect/zh_CN/htmledition/js/wxLogin.js"></script>
-	<script>
-        //百度统计
-        var _hmt = _hmt || [];
-        (function() {
-            var hm = document.createElement("script");
-            hm.src = "https://hm.baidu.com/hm.js?577038104fe0a8e00d90faee2f037aac";
-            var s = document.getElementsByTagName("script")[0];
-            s.parentNode.insertBefore(hm, s);
-        })();
-    </script>
-	<script>
-        //腾讯统计
-        var _mtac = {};
-        (function() {
-            var mta = document.createElement("script");
-            mta.src = "http://pingjs.qq.com/h5/stats.js?v2.0.4";
-            mta.setAttribute("name", "MTAH5");
-            mta.setAttribute("sid", "500553015");
-            var s = document.getElementsByTagName("script")[0];
-            s.parentNode.insertBefore(mta, s);
-        })();
-    </script>
-	<script type="text/javascript" src="http://tajs.qq.com/stats?sId=64208831" charset="UTF-8"></script>
 </body>
 </html>
